#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

JG-2011-04-06-1: Bugfix:      change install text about arco_read user
                 Issue:       AR-3
                 Review:      DG

JG-2011-04-06-0: Bugfix:      dbwriter statistics thread throws error
                 Issue:       AR-4
                 Review:      SH

JG-2011-03-29-0: Cleanup:     minor code cleanup and fix to compiling the JUnit
                              tests.

JG-2011-03-23-1: Cleanup:     removed the reporting code (Web-Console)
                 Issue:       AR-1
                 Review:      DG

JG-2011-03-23-0: Bugfix:      fixed the build with current versions of tools
                              (Java, ant, jaxb, removed dependency to jwsdp)
                 Cleanup:     removed old review directory
                 Issue:       AR-2
                 Review:      DG

mD-2009-12-11-0: CVS:		Created V62u5_TAG
-------------------------------------------------------
MD-2009-12-09-0: CVS:		Created V62u5RC2_TAG
-------------------------------------------------------
MD-2009-12-02-1: CVS:		Created V62u5RC1_TAG
-------------------------------------------------------

MD-2009-12-01-0: Enhancem:    checkin version file

LP-2009-11-27-0: Bugfix:      dbwriter.conf can not be read during upgrading
                              dbwriter
                 Bugster:     6902920
                 Issue:       3187
                 Bugfix:      dbwriter installer shows error message if SGE_ROOT
                              is not set
                 Bugster:     6902923
                 Issue:       3187
                 Review:      MD
