@@ -8,6 +8,9 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2011-04-07-0: Cleanup:     cleaned up and updated build instructions
+                 Review:      DG
+
 JG-2011-04-06-1: Bugfix:      change install text about arco_read user
                  Issue:       AR-3
                  Review:      DG
